# learn-category-theory

./: .gitignore
haskell/: Foo.hs  PrintColor.hs  PrintInColor.hs  UseFoo.hs  basics.hs  calc.hs  ghc-build.md  ghci.md  io.hs  lazy.hs  lists.hs  literate-bird-tracks.lhs  literate.lhs  loops.hs  monoid.hs  pager.hs  spaces-v-braces.hs  test.hs  types.hs
haskell/HiD/: HiD.cabal  fmt-package.hs  text.hs
haskell/pager/: hcat.cabal  mynads.hs  native-nads.hs  pager.hs
haskell/pager/app/: Main.hs
haskell/pager/src/: HCat.hs
haskell/pager/test/: Main.hs
