cabal-version:      3.0
name:               HiD
version:            0.1.0.0
author:             Wes Higbee
build-type:         Simple
-- extra-source-files:

common warnings
    -- ghc-options: -Wnone

executable HiD
    import:           warnings
    main-is:          fmt-package.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
            base ^>=4.18.2.0
            , fmt
    hs-source-dirs:   .
    default-language: Haskell2010
